Fix Topbar alignment

--- a/js/src/main/TopBar/TopBar.css
+++ b/js/src/main/TopBar/TopBar.css
@@ -5,7 +5,8 @@
  * See /LICENSE for more information.
  */
 
-#top-bar, #top-bar-container {
+#top-bar,
+#top-bar-container {
     display: flex;
     justify-content: flex-end;
 }
@@ -33,6 +34,9 @@
         position: initial;
         margin-bottom: 1rem;
     }
+    #content-container h1:first-child {
+        margin-top: 3.1rem;
+    }
 }
 
 #top-bar a:hover {
@@ -40,12 +44,13 @@
     color: #00a2e2;
 }
 
-#top-bar .dropdown-header, #top-bar .dropdown-header a {
+#top-bar .dropdown-header,
+#top-bar .dropdown-header a {
     color: #333333;
 }
 
 #top-bar .dropdown-header h5 {
-    margin-bottom: 0
+    margin-bottom: 0;
 }
 
 #top-bar .dropdown:hover .dropdown-menu {
